<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="com.wolffincdevelopment.hiit_it.activity.addtrack.viewmodel.AddTrackItem"/>

        <variable
            name="item"
            type="AddTrackItem"/>
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        tools:context=".activity.AddTrackActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/default_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="@drawable/drop_shadow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/add_track_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:transitionName="card"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="6dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/album_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_music_video_dark_orange"/>

                    <TextView
                        android:id="@+id/song_title"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="12dp"
                        android:text="@{item.song}"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:transitionName="song"
                        card_view:layout_constraintLeft_toRightOf="@+id/album_image"
                        app:layout_constraintTop_toTopOf="@id/album_image"/>

                    <TextView
                        android:id="@+id/artist_album_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.artistAndAlbum}"
                        android:textSize="12sp"
                        android:transitionName="artist_album"
                        app:layout_constraintLeft_toLeftOf="@+id/song_title"
                        app:layout_constraintTop_toBottomOf="@+id/song_title"/>

                    <ImageButton
                        android:id="@+id/previewButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button_ripple"
                        android:onClick="@{() -> item.onPreviewButtonClicked()}"
                        android:src="@{item.previewButtonImage}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <LinearLayout
                        android:id="@+id/start_time_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="@id/previewButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/previewButton">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_text"
                            android:textColor="@android:color/black"
                            android:textSize="17sp"
                            android:transitionName="@string/start_with_colon"/>

                        <EditText
                            android:id="@+id/start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:ems="3"
                            android:hint="@string/zero_time"
                            android:inputType="time"
                            android:maxLength="5"
                            android:text="@{item.startTime}"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/greyText"
                            android:transitionName="start_time"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/stop_time_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/previewButton"
                        app:layout_constraintTop_toTopOf="@id/previewButton">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop_text"
                            android:textColor="@android:color/black"
                            android:textSize="17sp"
                            android:transitionName="@string/stop_with_colon"/>

                        <EditText
                            android:id="@+id/stop_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:ems="3"
                            android:hint="@string/zero_time"
                            android:inputType="time"
                            android:maxLength="5"
                            android:text="@{item.stopTime}"
                            android:textAlignment="center"
                            android:textColorHint="@color/greyText"
                            android:transitionName="stop_time"/>

                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/preview_clock_container"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:background="@android:color/black"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/preview_clock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal"
                            android:text="@{item.countDownTime}"
                            android:textColor="@color/white"
                            android:textSize="32sp"
                            tools:text="00:00:00"/>

                    </FrameLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/add_track_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="@{item.addTrackButtonDrawable}"
                android:enabled="@{item.addTrackButtonVerified}"
                android:onClick="@{() -> item.onAddClicked()}"
                android:text="@string/add_track"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view"/>

            <View
                android:id="@+id/add_track_button_view"
                android:layout_width="130dp"
                android:layout_height="4dp"
                android:background="@drawable/drop_shadow"
                android:clickable="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_track_button"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</layout>

